--- a/cars/.env
+++ b/cars/.env
@@ -49,6 +49,8 @@ ELASTICSEARCH_DSN=elasticsearch:9200
 READ_REPOSITORY=elasticsearch
 WRITE_REPOSITORY=mysql
 
+CACHE=logger
+
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
